tests/typescript/pos/objects/obj-08.ts

/*@ a :: { b: { c: number } } */
var a  = { b : { c: 3 } };

