tests/typescript/neg/objects/obj-08.ts

/*@ a :: { b: { c: { string | true } } } */
var a  = { 
  b : {
    c: 3
  },
  e : "st"
};


